--- a/3d/earrings.html
+++ b/3d/earrings.html
@@ -928,8 +928,11 @@
 
         <div class="row pt-4">
           <div class="col-sm-12 text-center pb-4">
-            <iframe src='//spins0.arqspin.com/iframe.html?spin=3vmk8z2pe36u&is=0.16' class="spinning-diamond"
-              scrolling='no' frameborder='0'></iframe>
+            <!-- <iframe src='//spins0.arqspin.com/iframe.html?spin=3vmk8z2pe36u&is=0.16' class="spinning-diamond"
+              scrolling='no' frameborder='0'></iframe> -->
+            <img class="spinning-diamond"
+              src="https://www.michaeltrio.com/pub/media/catalog/product/cache/451cc34aa0c2fd8d78ba81cb10feab48/m/d/mde0006-l100-14kw_1.jpg"
+              alt="">
           </div>
           <div class="col-sm-12 reduce-padding-mobile ">
 
@@ -1027,8 +1030,12 @@
         <div class="row pt-4">
           <div class="col-sm-12 text-center pb-4">
 
-            <iframe src="//spins0.arqspin.com/iframe.html?spin=1i8md9xrpzdrx&amp;is=0.16" class="spinning-diamond"
-              scrolling="no" frameborder="0"></iframe>
+            <!-- <iframe src="//spins0.arqspin.com/iframe.html?spin=1i8md9xrpzdrx&amp;is=0.16" class="spinning-diamond"
+              scrolling="no" frameborder="0"></iframe> -->
+
+            <img class="spinning-diamond"
+              src="https://www.michaeltrio.com/pub/media/catalog/product/cache/451cc34aa0c2fd8d78ba81cb10feab48/r/o/round_i_-_0.75ct.jpg"
+              alt="">
 
           </div>
           <div class="col-sm-12 reduce-padding-mobile ">
@@ -1087,6 +1094,7 @@
             <div class="row earrings2021" style="flex-wrap: wrap;padding:0px 15px; display: none;"> </div>
             <div id="EISI2020" class="row earrings2021" style="flex-wrap: wrap;padding:0px 15px; display: none;"> </div>
             <div id="EGVS2020" class="row earrings2021" style="flex-wrap: wrap;padding:0px 15px; display: none;"> </div>
+            <div style="clear: both;"></div>
             <div id="EISI2020_NoItem" class="row earrings2021 text-center"
               style="flex-wrap: wrap;padding:0px 15px; display: none;">
               For customisation of Solitaire Studs, please contact us for availability and pricing. </div>
@@ -1129,8 +1137,12 @@
         <div class="row pt-4">
           <div class="col-sm-12 text-center pb-4">
 
-            <iframe src="//spins0.arqspin.com/iframe.html?spin=fgx31qimqin7&amp;is=0.16" class="spinning-diamond"
-              scrolling="no" frameborder="0"></iframe>
+            <!-- <iframe src="//spins0.arqspin.com/iframe.html?spin=fgx31qimqin7&amp;is=0.16" class="spinning-diamond"
+              scrolling="no" frameborder="0"></iframe> -->
+
+            <img class="spinning-diamond"
+              src="https://www.michaeltrio.com/pub/media/catalog/product/cache/451cc34aa0c2fd8d78ba81cb10feab48/1/_/1.0ct_pr.jpg"
+              alt="">
           </div>
           <div class="col-sm-12 reduce-padding-mobile">
 
@@ -1190,6 +1202,7 @@
             </div>
             <div class="row earrings2021" style="flex-wrap: wrap;padding:0px 15px; display: none;">
             </div>
+            <div style="clear: both;"></div>
             <div id="EL2020_NoItem" class="row earrings2021 text-center"
               style="flex-wrap: wrap;padding:0px 15px; display: none;">
               For customisation of Solitaire Studs, please contact us for availability and pricing. </div>
