--- a/3d/pendant.html
+++ b/3d/pendant.html
@@ -925,8 +925,11 @@
 
         <div class="row pt-4">
           <div class="col-sm-12 text-center pb-4">
-            <iframe src='//spins0.arqspin.com/iframe.html?spin=f8zucozfk120&is=0.16' class="spinning-diamond"
-              scrolling='no' frameborder='0'></iframe>
+            <!-- <iframe src='//spins0.arqspin.com/iframe.html?spin=f8zucozfk120&is=0.16' class="spinning-diamond"
+              scrolling='no' frameborder='0'></iframe> -->
+            <img class="spinning-diamond"
+              src="https://www.michaeltrio.com/pub/media/catalog/product/cache/451cc34aa0c2fd8d78ba81cb10feab48/m/d/mdp0001-l100-14kw.jpg"
+              alt="">
           </div>
           <div class="col-sm-12 reduce-padding-mobile ">
 
