--- a/content_pages/contact.html
+++ b/content_pages/contact.html
@@ -4,6 +4,26 @@
 
 <head>
     <style>
+        .form-control,
+        input[type="email"],
+        input[type="password"],
+        input[type="search"],
+        input[type="text"],
+        select,
+        textarea {
+            height: 40px;
+            line-height: 40px !important;
+        }
+
+        #contactfrm .mt-2 {
+            margin-top: 0px !important;
+        }
+
+        #contactfrm .mdl-textfield {
+            margin-top: 10px !important;
+            margin-bottom: 10px !important;
+        }
+
         /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Common CSS @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 
         * {
