--- a/review_home.html
+++ b/review_home.html
@@ -820,12 +820,11 @@
 
         .home-jewel {
             position: relative;
-            margin-top: 0px;
+            margin-top: 150px;
             background-color: #f7e6dd;
         }
 
         .home-jewel::before {
-            display: none;
             content: "jewellery";
             position: absolute;
             top: -131px;
@@ -1163,7 +1162,7 @@
                                 <div class="item">
                                     <article class="text-center">
                                         <figure><a href="{{store url='engagement-rings/channel-set'}}">
-                                                <img src="{{media url=&quot;0home/msr0033f.jpg&quot;}}"></a>
+                                                <img src="{{media url=&quot;0home/msr0355-18kw.jpg&quot;}}"></a>
                                         </figure>
                                         <a href="{{store url='engagement-rings/channel-set'}}">Channel-Set</a>
                                     </article>
@@ -1639,7 +1638,7 @@
 
         <section class="home-jewel bg-lighterorange py-5">
             <div class="container">
-                <h1 class="text-center mb-5">Jewellery</h1>
+
                 <p class="text-center mb-5 ">Delicate jewellery pieces hand-crafted for any occasion. Explore our
                     extensive range of jewellery pieces from dainty to extravagant, made with love and quality as our
                     utmost priority.
