--- a/appointment/email-virtual.html
+++ b/appointment/email-virtual.html
@@ -112,133 +112,137 @@
 
                 <tr>
                     <td colspan="2" style="padding: 15px;">
-                        <table border="0" align="center" cellpadding="0" cellspacing="0" style="margin-bottom:20px;">
-                            <tbody>
-                                <tr>
-                                    <td style="padding-right:10px;text-align: center; width: 33%;">
+                        <span style="display: none;">
+                            <table border="0" align="center" cellpadding="0" cellspacing="0"
+                                style="margin-bottom:20px;">
+                                <tbody>
+                                    <tr>
+                                        <td style="padding-right:10px;text-align: center; width: 33%;">
 
-                                        <a href="https://www.michaeltrio.com/engagement-rings/setting"
-                                            style="text-decoration: none;">
-                                            <img src="https://www.michaeltrio.com/pub/media/0appointment/2.jpg"
-                                                alt="icon-facebook" style="max-width:100%;" border="0" hspace="0"
-                                                vspace="0">
+                                            <a href="https://www.michaeltrio.com/engagement-rings/setting"
+                                                style="text-decoration: none;">
+                                                <img src="https://www.michaeltrio.com/pub/media/0appointment/2.jpg"
+                                                    alt="icon-facebook" style="max-width:100%;" border="0" hspace="0"
+                                                    vspace="0">
 
 
-                                            <p style="text-align: center; text-transform: uppercase; padding-top:5px;
+                                                <p style="text-align: center; text-transform: uppercase; padding-top:5px;
                                         color: #9BB8D3;">Proposal Rings</p>
-                                        </a>
-                                    </td>
-                                    <td style="padding-right:5px;padding-left:5px;text-align: center; width: 33%;">
-                                        <a href="https://www.michaeltrio.com/wedding-bands/women"
-                                            style="text-decoration: none;">
+                                            </a>
+                                        </td>
+                                        <td style="padding-right:5px;padding-left:5px;text-align: center; width: 33%;">
+                                            <a href="https://www.michaeltrio.com/wedding-bands/women"
+                                                style="text-decoration: none;">
 
-                                            <img src="https://www.michaeltrio.com/pub/media/0appointment/WB1.jpg"
-                                                alt="icon-instagram" style="max-width:100%;" border="0" hspace="0"
-                                                vspace="0" mc:edit="iconinstagramcolor tb16">
+                                                <img src="https://www.michaeltrio.com/pub/media/0appointment/WB1.jpg"
+                                                    alt="icon-instagram" style="max-width:100%;" border="0" hspace="0"
+                                                    vspace="0" mc:edit="iconinstagramcolor tb16">
 
-                                            <p style="text-align: center; text-transform: uppercase; padding-top:5px;
+                                                <p style="text-align: center; text-transform: uppercase; padding-top:5px;
                                         color: #9BB8D3;">Wedding Bands</p>
-                                        </a>
-                                    </td>
-                                    <td style="padding-left:10px;text-align: center; width: 33%;">
-                                        <a href="https://www.michaeltrio.com/customisation"
-                                            style="text-decoration: none;">
+                                            </a>
+                                        </td>
+                                        <td style="padding-left:10px;text-align: center; width: 33%;">
+                                            <a href="https://www.michaeltrio.com/customisation"
+                                                style="text-decoration: none;">
 
-                                            <img src="https://www.michaeltrio.com/pub/media/0appointment/3.jpg"
-                                                alt="icon-instagram" style="max-width:100%;" border="0" hspace="0"
-                                                vspace="0" mc:edit="iconinstagramcolor tb16">
+                                                <img src="https://www.michaeltrio.com/pub/media/0appointment/3.jpg"
+                                                    alt="icon-instagram" style="max-width:100%;" border="0" hspace="0"
+                                                    vspace="0" mc:edit="iconinstagramcolor tb16">
 
-                                            <p style="text-align: center; text-transform: uppercase; padding-top:5px;
+                                                <p style="text-align: center; text-transform: uppercase; padding-top:5px;
                                         color: #9BB8D3;">Custom-Made</p>
-                                        </a>
+                                            </a>
+                                        </td>
+
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <h3
+                                style="margin-bottom: 10px; text-align: center; text-transform: uppercase;font-weight: normal;">
+                                Need More Help?
+                            </h3>
+                            <p style="margin-bottom: 20px; text-align: center;">
+                                Our jewellery experts are available from
+                                Monday - Sunday 12PM - 7 PM
+                            </p>
+                            <table border="0" align="center" cellpadding="0" cellspacing="0"
+                                style="margin-bottom:10px;">
+                                <tbody>
+                                    <tr>
+                                        <td style="padding-right:45px;text-align: center;">
+                                            <a href="https://www.michaeltrio.com/contacts" target="_blank"
+                                                style="text-decoration: none;">
+
+                                                <div style="max-width:60px;">
+                                                    <img src="https://www.michaeltrio.com/pub/media/0appointment/1.png"
+                                                        alt="" width="60">
+                                                </div>
+                                            </a>
+                                            <p style="text-transform: uppercase;margin-top:5px;">Chat</p>
+                                        </td>
+                                        <td style="padding-right:45px;text-align: center;">
+                                            <a href="mailto:service@michaeltrio.com" target="_blank"
+                                                style="text-decoration: none;">
+                                                <div style="max-width:60px;">
+                                                    <img src="https://www.michaeltrio.com/pub/media/0appointment/2.png"
+                                                        alt="" width="60">
+
+                                                </div>
+                                            </a>
+                                            <p style="text-transform: uppercase;margin-top:5px;">Email</p>
+                                        </td>
+                                        <td style="padding-right:0px;text-align: center;">
+                                            <a href="https://www.michaeltrio.com/locations"
+                                                style="text-decoration: none;">
+
+
+                                                <div style="max-width:60px;">
+                                                    <img src="https://www.michaeltrio.com/pub/media/0appointment/3.png"
+                                                        alt="" width="60">
+
+                                                </div>
+                                            </a>
+                                            <p style="text-transform: uppercase;margin-top:5px;">Call</p>
+                                        </td>
+
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <table border="0" align="center" cellpadding="0" cellspacing="0" width="100%"
+                                style="margin-bottom:20px;display: none;">
+                                <tr style="background-color: #9BB8D3;text-transform: uppercase;text-align: center;">
+                                    <td style="padding:10px;color:#fff;letter-spacing: 1px;font-weight: 300; ">
+                                        &nbsp;
+                                        <span style="display: none;">
+                                            REFER A FRIEND AND GET UP
+                                            TO RM
+                                            300! <a href="https://www.michaeltrio.com/refer-a-friend"
+                                                style="color: #fff; text-decoration: underline !important;"><i>LEARN
+                                                    MORE></i></a>
+                                        </span>
+
                                     </td>
+
 
                                 </tr>
-                            </tbody>
-                        </table>
-                        <h3
-                            style="margin-bottom: 10px; text-align: center; text-transform: uppercase;font-weight: normal;">
-                            Need More Help?
-                        </h3>
-                        <p style="margin-bottom: 20px; text-align: center;">
-                            Our jewellery experts are available from
-                            Monday - Sunday 12PM - 7 PM
-                        </p>
-                        <table border="0" align="center" cellpadding="0" cellspacing="0" style="margin-bottom:10px;">
-                            <tbody>
-                                <tr>
-                                    <td style="padding-right:45px;text-align: center;">
-                                        <a href="https://www.michaeltrio.com/contacts" target="_blank"
-                                            style="text-decoration: none;">
+                            </table>
 
-                                            <div style="max-width:60px;">
-                                                <img src="https://www.michaeltrio.com/pub/media/0appointment/1.png"
-                                                    alt="" width="60">
-                                            </div>
-                                        </a>
-                                        <p style="text-transform: uppercase;margin-top:5px;">Chat</p>
-                                    </td>
-                                    <td style="padding-right:45px;text-align: center;">
-                                        <a href="mailto:service@michaeltrio.com" target="_blank"
-                                            style="text-decoration: none;">
-                                            <div style="max-width:60px;">
-                                                <img src="https://www.michaeltrio.com/pub/media/0appointment/2.png"
-                                                    alt="" width="60">
-
-                                            </div>
-                                        </a>
-                                        <p style="text-transform: uppercase;margin-top:5px;">Email</p>
-                                    </td>
-                                    <td style="padding-right:0px;text-align: center;">
-                                        <a href="https://www.michaeltrio.com/locations" style="text-decoration: none;">
-
-
-                                            <div style="max-width:60px;">
-                                                <img src="https://www.michaeltrio.com/pub/media/0appointment/3.png"
-                                                    alt="" width="60">
-
-                                            </div>
-                                        </a>
-                                        <p style="text-transform: uppercase;margin-top:5px;">Call</p>
-                                    </td>
-
-                                </tr>
-                            </tbody>
-                        </table>
-                        <table border="0" align="center" cellpadding="0" cellspacing="0" width="100%"
-                            style="margin-bottom:20px;display: none;">
-                            <tr style="background-color: #9BB8D3;text-transform: uppercase;text-align: center;">
-                                <td style="padding:10px;color:#fff;letter-spacing: 1px;font-weight: 300; ">
-                                    &nbsp;
-                                    <span style="display: none;">
-                                        REFER A FRIEND AND GET UP
-                                        TO RM
-                                        300! <a href="https://www.michaeltrio.com/refer-a-friend"
-                                            style="color: #fff; text-decoration: underline !important;"><i>LEARN
-                                                MORE></i></a>
-                                    </span>
-
-                                </td>
-
-
-                            </tr>
-                        </table>
-
-                        <table border="0" align="center" cellpadding="0" cellspacing="0" width="100%"
-                            style="margin-bottom:20px;">
-                            <tr style="background-color: #9BB8D3;text-transform: uppercase;text-align: center;">
-                                <td style="padding:10px;color:#fff;letter-spacing: 1px;font-weight: 300; ">
-                                    &nbsp;
-                                    <span>
+                            <table border="0" align="center" cellpadding="0" cellspacing="0" width="100%"
+                                style="margin-bottom:20px;">
+                                <tr style="background-color: #9BB8D3;text-transform: uppercase;text-align: center;">
+                                    <td style="padding:10px;color:#fff;letter-spacing: 1px;font-weight: 300; ">
+                                        &nbsp;
+                                        <!-- <span>
                                         REFER A FRIEND, COMING SOON TO MALAYSIA!
-                                    </span>
+                                    </span> -->
 
-                                </td>
+                                    </td>
 
 
-                            </tr>
-                        </table>
-
+                                </tr>
+                            </table>
+                        </span>
 
 
                         <table border="0" align="center" cellpadding="0" cellspacing="0" style="margin-bottom:20px;">
