--- a/test_googlesheet.html
+++ b/test_googlesheet.html
@@ -5,139 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
-    <style>
-        * {
-            box-sizing: border-box
-        }
-
-        /* Full-width input fields */
-        input[type=text],
-        input[type=password] {
-            width: 100%;
-            padding: 15px;
-            margin: 5px 0 22px 0;
-            display: inline-block;
-            border: none;
-            background: #f1f1f1;
-        }
-
-        input[type=text]:focus,
-        input[type=password]:focus {
-            background-color: #ddd;
-            outline: none;
-        }
-
-        hr {
-            border: 1px solid #f1f1f1;
-            margin-bottom: 25px;
-        }
-
-        /* Set a style for all buttons */
-        button {
-            background-color: #04AA6D;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            cursor: pointer;
-            width: 100%;
-            opacity: 0.9;
-        }
-
-        button:hover {
-            opacity: 1;
-        }
-
-        /* Extra styles for the cancel button */
-        .cancelbtn {
-            padding: 14px 20px;
-            background-color: #f44336;
-        }
-
-        /* Float cancel and signup buttons and add an equal width */
-        .cancelbtn,
-        .signupbtn {
-            float: left;
-            width: 50%;
-        }
-
-        /* Add padding to container elements */
-        .container {
-            padding: 16px;
-        }
-
-        /* Clear floats */
-        .clearfix::after {
-            content: "";
-            clear: both;
-            display: table;
-        }
-
-        /* Change styles for cancel button and signup button on extra small screens */
-        @media screen and (max-width: 300px) {
-
-            .cancelbtn,
-            .signupbtn {
-                width: 100%;
-            }
-        }
-    </style>
+    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
-    <form action="https://sheetdb.io/api/v1/ot9ul86d1qbzk" method="post" id="sheetdb-form">
-        <div class="container">
-            <h1>Sign Up</h1>
-            <p>Please fill in this form to create an account.</p>
-            <hr>
-
-            <!-- <label for="Time"><b>Time</b></label>
-            <input type="text" placeholder="Enter Time" name="data[Time]" required> -->
-
-
-            <input id="date" type="hidden" name="data[Date]" required>
-            <script> document.getElementById("date").value = new Date().toDateString().replace(/ /g, "-");</script>
-
-
-            <label for="Name"><b>Name</b></label>
-            <input type="text" placeholder="Enter Name" name="data[Name]" required>
-
-            <label for="Your Email Address"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" name="data[Your Email Address]">
-
-
-            <div class="clearfix">
-                <button type="button" class="cancelbtn">Cancel</button>
-                <button type="submit" class="signupbtn">Sign Up</button>
-            </div>
-        </div>
-    </form>
-
-
-    <!-- <script>console.log(new Date().toDateString().replace(/ /g, ","));</script> -->
-
-
 
     <script>
-        var form = document.getElementById('sheetdb-form');
-        form.addEventListener("submit", e => {
-            e.preventDefault();
-            fetch(form.action, {
-                method: "POST",
-                body: new FormData(document.getElementById("sheetdb-form")),
-            }).then(
-                response => response.json()
-            ).then((html) => {
-                // you can put any JS code here
-                // window.open('page2.html', '_blank');
-                alert("success!");
-
+        $(document).ready(function ($) {
+            // var form = $(this);
+            var newPost = {
+                "date": "Thu-Jul-14-2022",
+                "full_name": "jessie",
+                "email": "jessie@michaeltrio.com",
+                "receive_offer": "",
+                "f1_full_name": "alex",
+                "f1_email": "alex@michaeltrio.com",
+                "home_address": "xxxxxxx",
+                "rewards_voucher": "SGD$100 Michael Trio Voucher",
+                "terms_conditions": ""
+            }
+            var actionUrl = 'https://sheetdb.io/api/v1/8nkdybl3ysfe3';
+            $.ajax({
+                type: "POST",
+                url: actionUrl,
+                data: newPost,
+                success: function (response) {
+                    response => response.json()
+                    console.log(response.created);
+                    $(location).attr('href', 'https://www.michaeltrio.com/')
+                }
             });
         });
     </script>
-
-
 
 </body>
 
